Add token config option translations

--- a/core/src/main/resources/assets/eshare/i18n/en_us.json
+++ b/core/src/main/resources/assets/eshare/i18n/en_us.json
@@ -4,6 +4,10 @@
             "name": "e.share Uploader",
             "enabled": {
                 "name": "Enabled"
+            },
+            "token": {
+                "name": "e.share Token",
+                "description": "You can find your API Key at §bhttps://share.ebio.gg/dashboard"
             }
         },
         "messages": {
