Implement remaining i18n strings

--- a/core/src/main/resources/assets/eshare/i18n/en_us.json
+++ b/core/src/main/resources/assets/eshare/i18n/en_us.json
@@ -41,14 +41,18 @@
             "alreadyUploaded": "You've already uploaded this screenshot! %s",
             "uploadAnyway": "Upload it anyway?",
             "upload": "Click here to upload the screenshot to e.share!",
-            "uploading": "Uploading screenshot..."
+            "uploading": "Uploading screenshot...",
+            "status": "You have used %s out of %s uploads."
         },
         "upload": {
             "hover": "Clickable",
             "copy": "[COPY URL]",
             "open": "[OPEN IN BROWSER]",
             "emptyError": "Empty error!",
-            "uploaded": "Screenshot uploaded! %s %s"
+            "uploaded": "Screenshot uploaded! %s %s",
+            "success": "Uploaded!",
+            "error": "Error!",
+            "error_description": "Something went wrong. Contact help@ebio.gg"
         }
     }
 }
