Extract errors to own object, move all messages to messages object

--- a/core/src/main/resources/assets/eshare/i18n/en_us.json
+++ b/core/src/main/resources/assets/eshare/i18n/en_us.json
@@ -36,23 +36,24 @@
             }
         },
         "messages": {
-            "noToken": "Please put your e.share token into the addon config!",
-            "file": "File not found!",
-            "alreadyUploaded": "You've already uploaded this screenshot! %s",
             "uploadAnyway": "Upload it anyway?",
             "upload": "Click here to upload the screenshot to e.share!",
             "uploading": "Uploading screenshot...",
+            "usage": "Your upload usage",
             "status": "You have used %s out of %s uploads.",
-            "success": "Uploaded!",
-            "error": "Error!",
-            "error_description": "Something went wrong. Contact help@ebio.gg"
+            "uploaded": "Screenshot uploaded! %s %s"
         },
         "upload": {
             "hover": "Clickable",
             "copy": "[COPY URL]",
-            "open": "[OPEN IN BROWSER]",
-            "emptyError": "Empty error!",
-            "uploaded": "Screenshot uploaded! %s %s"
+            "open": "[OPEN IN BROWSER]"
+        },
+        "errors": {
+            "title": "An error ocurred!",
+            "empty": "Something went wrong. Contact help@ebio.gg",
+            "noToken": "Please put your e.share token into the addon config!",
+            "file": "File not found!",
+            "alreadyUploaded": "You've already uploaded this screenshot! %s"
         }
     }
 }
