--- a/core/src/main/resources/assets/eshare/i18n/en_us.json
+++ b/core/src/main/resources/assets/eshare/i18n/en_us.json
@@ -12,16 +12,16 @@
             "openRegisterPage": {
                 "name": "Register on e.share",
                 "description": "Signup, configure and grab your API token on https://share.ebio.gg/dashboard",
-                "text": "§7§oRegister"
+                "text": "Register"
             },
             "token": {
                 "name": "e.share Token",
-                "description": "You can find your API Key at §bhttps://share.ebio.gg/dashboard"
+                "description": "You can find your Token at §bhttps://share.ebio.gg/dashboard"
             },
             "checkAccount": {
                 "name": "Check account limit",
                 "description": "Check if your token is valid & your remaining screenshots for today...",
-                "text": "§7§oCheck"
+                "text": "Check"
             },
             "header": {
                 "register": {
